; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/msm/disp/mdp4/extr_mdp4_lvds_pll.c_find_rate.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/msm/disp/mdp4/extr_mdp4_lvds_pll.c_find_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pll_rate = type { i64 }

@freqtbl = common dso_local global %struct.pll_rate* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.pll_rate* (i64)* @find_rate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.pll_rate* @find_rate(i64 %0) #0 {
  %2 = alloca %struct.pll_rate*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 1, i32* %4, align 4
  br label %5

5:                                                ; preds = %26, %1
  %6 = load i32, i32* %4, align 4
  %7 = load %struct.pll_rate*, %struct.pll_rate** @freqtbl, align 8
  %8 = call i32 @ARRAY_SIZE(%struct.pll_rate* %7)
  %9 = icmp slt i32 %6, %8
  br i1 %9, label %10, label %29

10:                                               ; preds = %5
  %11 = load i64, i64* %3, align 8
  %12 = load %struct.pll_rate*, %struct.pll_rate** @freqtbl, align 8
  %13 = load i32, i32* %4, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds %struct.pll_rate, %struct.pll_rate* %12, i64 %14
  %16 = getelementptr inbounds %struct.pll_rate, %struct.pll_rate* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp ugt i64 %11, %17
  br i1 %18, label %19, label %25

19:                                               ; preds = %10
  %20 = load %struct.pll_rate*, %struct.pll_rate** @freqtbl, align 8
  %21 = load i32, i32* %4, align 4
  %22 = sub nsw i32 %21, 1
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds %struct.pll_rate, %struct.pll_rate* %20, i64 %23
  store %struct.pll_rate* %24, %struct.pll_rate** %2, align 8
  br label %35

25:                                               ; preds = %10
  br label %26

26:                                               ; preds = %25
  %27 = load i32, i32* %4, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %4, align 4
  br label %5

29:                                               ; preds = %5
  %30 = load %struct.pll_rate*, %struct.pll_rate** @freqtbl, align 8
  %31 = load i32, i32* %4, align 4
  %32 = sub nsw i32 %31, 1
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds %struct.pll_rate, %struct.pll_rate* %30, i64 %33
  store %struct.pll_rate* %34, %struct.pll_rate** %2, align 8
  br label %35

35:                                               ; preds = %29, %19
  %36 = load %struct.pll_rate*, %struct.pll_rate** %2, align 8
  ret %struct.pll_rate* %36
}

declare dso_local i32 @ARRAY_SIZE(%struct.pll_rate*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
